name:                generator
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/ejconlon/generator#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2017 Eric Conlon
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable generator
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.9
                     , data-default
                     , hakyll
